Beispielsetup/FIFA_1.yaml
## --- Beginning of YAML file ---
## 1. Tell Kubernetes which API version to use
apiVersion: v1
## 2. Declare what kind of resource we want to create
kind: Pod
## 3. Set metadata for this resource
metadata:
  name: mihost3-nd-s1-pod ## Name of the Pod
  labels: ## Labels help us find and organize Pods
    app: mihost3-nd-s1
  annotations:
    k8s.v1.cni.cncf.io/networks: sshintern-conf3, bridge-s1-fifa-conf  
## 4. Define what the Pod should contain
spec:
  containers: ## Pod can run one or more containers
    - name: mihost3-nd-s1
      image: docker.io/miniinterneteth/d_host:latest
      ports: 
        - containerPort: 22
