Beispielsetup/S2.yaml
## --- Beginning of YAML file ---
## 1. Tell Kubernetes which API version to use
apiVersion: v1
## 2. Declare what kind of resource we want to create
kind: Pod
## 3. Set metadata for this resource
metadata:
  name: mi3-s2-pod ## Name of the Pod
  labels: ## Labels help us find and organize Pods
    app: mi3-s2
  annotations:
    k8s.v1.cni.cncf.io/networks: sshintern-conf3@ssh, bridge-s2-fifa-conf@fifa2, bridge-s2-uefa-conf@uefa2, bridge-s2-s1-conf@s1, bridge-s2-s3-conf@s3, bridge-s2-base@base
## 4. Define what the Pod should contain
spec:
  containers: ## Pod can run one or more containers
    - name: mi3-s2
      image: docker.io/miniinterneteth/d_switch:latest
      ports: 
        - containerPort: 22
