Beispielsetup/base.yaml
## --- Beginning of YAML file ---
## 1. Tell Kubernetes which API version to use
apiVersion: v1
## 2. Declare what kind of resource we want to create
kind: Pod
## 3. Set metadata for this resource
metadata:
  name: mi3-base-pod ## Name of the Pod
  labels: ## Labels help us find and organize Pods
    app: mi3-base
  annotations:
    k8s.v1.cni.cncf.io/networks: sshintern-conf3, bridge-s2-base-conf
## 4. Define what the Pod should contain
spec:
  containers: ## Pod can run one or more containers
    - name: mi3-base
      image: docker.io/miniinterneteth/d_router:latest
      ports: 
        - containerPort: 22
