Beispielsetup/ssh-service+deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: missh7
  name: missh7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: missh7
  template:
    metadata:
      name: missh7
      labels:
        app: missh7
      annotations:
        k8s.v1.cni.cncf.io/networks: sshglobal-conf, sshintern-conf3
    spec:
      containers: ## Pod can run one or more containers
        - name: missh7 ## Name of the container
          image: docker.io/miniinterneteth/d_ssh:latest ## Which container image to use
          ports: ## Which ports to expose
            - containerPort: 22
---

apiVersion: v1
kind: Service
metadata:
  name: missh7
spec:
  selector:
    app: missh7
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
  type: NodePort
